updated .gitignore for SNR tool

--- a/.gitignore
+++ b/.gitignore
@@ -39,3 +39,4 @@ megatools-*-git-*-linux-x86_64.tar.gz
 
 # WADA Signal-to-Noise Ratio tool
 /CookieTTS/scripts/WadaSNR/
+/CookieTTS/scripts/WadaSNR.tar.gz
