--- a/CookieTTS/_1_preprocess/config.json
+++ b/CookieTTS/_1_preprocess/config.json
@@ -4,10 +4,13 @@
     "THREADS": 16,
     "OUTPUT_SAMPLE_RATE": 48000,
     "OUTPUT_BIT_DEPTH": 2,
+    "LEFT_MARGIN_SECONDS": 0.0125,
+    "RIGHT_MARGIN_SECONDS": 0.0125,
     "DICT_PATH": "../dict/merged.dict.txt",
     "REGENERATE_EMOTION_INFO": false,
     "MIN_SPEAKER_DURATION_SECONDS": 15,
     "TRAIN_PERCENT": 0.95,
     "DELETE_NOISY": false,
-    "DELETE_VERY_NOISY": true
+    "DELETE_VERY_NOISY": true,
+    "VCTK_USE_AUX_MIC": false
 }
