FlowTTS cleanup and WIP alignment output to TensorBoard (the order is wrong)

--- a/.gitignore
+++ b/.gitignore
@@ -24,6 +24,10 @@ ipython_config.py
 /CookieTTS/_2_ttm/tacotron2/outdir/
 /CookieTTS/_4_mtw/waveglow/outdir/
 
+# Model logs
+/CookieTTS/_2_ttm/flowtts/logs/
+/CookieTTS/_2_ttm/tacotron2/logs/
+
 # megatools folders
 megatools-*-git-*-win64/
 megatools-*-git-*-win32/
