--- a/CookieTTS/_5_infer/t2s_server/t2s_config.json
+++ b/CookieTTS/_5_infer/t2s_server/t2s_config.json
@@ -8,37 +8,58 @@
         "sort_speakers": true,
         "localhost": false,
         "defaults": {
-            "current_text": "",
+            "current_text"   : "",
             "background_text": "Enter text.",
-            "speaker": ["(Show) My Little Pony_Twilight"],
-            "style_mode": "torchmoji_hidden",
-            "textseg_mode": "segment_by_sentencequote",
-            "batch_mode": "nochange",
-            "max_attempts": 96,
-            "max_duration_s": 15.0,
-            "batch_size": 96,
-            "dyna_max_duration_s": 0.125,
-            "use_arpabet": "on",
-            "target_score": 0.75,
+            "speaker"       : ["(Audiobook) Blizzard2011_Nancy"],
+            "style_mode"     : "torchmoji_hidden",
+            "textseg_mode"   : "segment_by_sentencequote",
+            "batch_mode"     : "nochange",
+            "max_attempts"   : 16,
+            "max_duration_s" : 10.0,
+            "batch_size"     : 256,
+            "use_arpabet"    : "on",
+            "target_score"   : 0.75,
+            "cat_silence_s"  : 0.1,
             "multispeaker_mode": "random",
-            "cat_silence_s": 0.1,
             "textseg_len_target": 120
+            "dyna_max_duration_s": 0.125,
         }
     },
     "workers": {
         "devices": ["cpu", "cuda:0"],
-        "sox_output_ext": "wav",
-        "working_directory": "server_infer",
-        "output_directory": "server_infer_done",
+        "sox_output_ext": "flac",
+        "working_directory": "D:/Audiobooks/unsorted_tmp",
+        "output_directory": "D:/Audiobooks/unsorted",
         "output_maxsize_gb": 0.01,
         "dict_path": "G:/TwiBot/tacotron2/filelists/merged.dict_.txt",
         "TTM": {
             "speaker_ids_file": "H:/ClipperDatasetV2/filelists/speaker_ids.txt",
             "use_speaker_ids_file_override": true,
-            "default_model": "MEL | Tacotron2 TM (Baseline 40K)",
+            "default_model": "MEL | Tacotron2 TM P3 V0 (35K Iters)",
             "models": {
-                "MEL | Tacotron2 TM (Baseline 40K)": {
+                "MEL | Tacotron2 TM P0 V0 (Best Val Model)": {
                     "modelpath": "G:/TwiBot/CookiePPPTTS/CookieTTS/_2_ttm/tacotron2_tm/outdir/best_val_model"
+                },
+                "MEL | Tacotron2 TM P0 V1 (Best Val Model)": {
+                    "modelpath": "G:/TwiBot/CookiePPPTTS/CookieTTS/_2_ttm/tacotron2_tm/outdir_p0_1_warm/best_val_model"
+                },
+                "MEL | Tacotron2 TM P2 V0 (8.5K Iters)": {
+                    "modelpath": "G:/TwiBot/CookiePPPTTS/CookieTTS/_2_ttm/tacotron2_tm/outdir_p2_0_scratch/checkpoint_8500"
+                },
+                "MEL | Tacotron2 TM P3 V0 (9.5K Iters)": {
+                    "modelpath": "G:/TwiBot/CookiePPPTTS/CookieTTS/_2_ttm/tacotron2_tm/outdir_p3_0_scratch/checkpoint_9500"
+                },
+                "MEL | Tacotron2 TM P3 V0 (12K Iters)": {
+                    "modelpath": "G:/TwiBot/CookiePPPTTS/CookieTTS/_2_ttm/tacotron2_tm/outdir_p3_0_scratch/checkpoint_12000"
+                },
+                "MEL | Tacotron2 TM P3 V0 (17K Iters)": {
+                    "modelpath": "G:/TwiBot/CookiePPPTTS/CookieTTS/_2_ttm/tacotron2_tm/outdir_p3_0_scratch/checkpoint_17000"
+                },
+                "MEL | Tacotron2 TM P3 V0 (24K Iters)": {
+                    "modelpath": "G:/TwiBot/CookiePPPTTS/CookieTTS/_2_ttm/tacotron2_tm/outdir_p3_0_scratch/checkpoint_24000"
+                },
+                "MEL | Tacotron2 TM P3 V0 (35K Iters)": {
+                    "modelpath": "G:/TwiBot/CookiePPPTTS/CookieTTS/_2_ttm/tacotron2_tm/outdir_p3_0_scratch/checkpoint_35000"
                 }
             }
         },
