--- a/.gitignore
+++ b/.gitignore
@@ -29,6 +29,10 @@ ipython_config.py
 /CookieTTS/_2_ttm/tacotron2_ssvae/NewCPs/
 /CookieTTS/_2_ttm/tacotron2_tm/outdir/
 /CookieTTS/_4_mtw/waveglow/checkpoints/
+/CookieTTS/_4_mtw/waveglow/checkpoints/
+/CookieTTS/_4_mtw/hifigan/cp_hifigan/
+/CookieTTS/_4_mtw/hifigan/cp_hifigan_44khz/
+/CookieTTS/_4_mtw/hifigan/cp_hifigan_universal44Khz/
 
 # Model logs
 /CookieTTS/_2_ttm/flowtts/logs/
