--- a/requirements.txt
+++ b/requirements.txt
@@ -1,21 +1,22 @@
-torch>=1.4.0
-numpy
-scipy
-librosa
-tensorboardX==1.1
-Unidecode
-text_unidecode
-nltk
-tqdm
-gdown
-soundfile
-py7zr
-syllables
 emoji
-webrtcvad
-pyloudnorm
-norbert
-webrtcvad
+gdown
+inflect
 ipywidgets
-pyworld
+librosa
+matplotlib
+nltk
+norbert
+numpy
 piqa
+py7zr
+pyloudnorm
+pyworld
+scipy
+soundfile
+syllables
+tensorboardX
+text_unidecode
+torch>=1.4.0
+tqdm
+Unidecode
+webrtcvad
